--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -6,4 +6,7 @@
     you can save and store notes hear in text format<br />
     enjoy !!!<br/>
 </h2>
+<p>
+    devloper: Mihilesh Joshi
+</p>
 {% endblock %}
